# for_homework10.1

./: .env.sample  .flake8  .gitignore  main.py  pyproject.toml
data/: t.text  transactions.csv  transactions_excel.xlsx
src/: ambit.py  decorators.py  external_api.py  filter.py  for_work.py  generators.py  logger.py  masks.py  new_function.py  processing.py  read_excel_and_csv_file.py  transactions.csv  utils.py  widget.py
tests/: mylog.txt  test_ambit.py  test_demo.py  test_generators.py  test_masks.py  test_processing.py  test_read_excel_and_csv_file.py  test_utils.py  test_widget.py  testing_decorators.py
